--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,20 @@
 <resources>
     <string name="app_name">NetworkOT</string>
+    <string name="enregistrer">enregistrer</string>
+    <string name="accueil">Accueil</string>
+    <string name="ajouter">Ajouter</string>
+    <string name="supprimer">Supprimer</string>
+    <string name="reinitialiser">reinitialiser</string>
+
+
+    <!--connexion-->
+    <string name="ajouter_cnx">Ajouter connexion</string>
+    <string name="modifier_cnx">modifier connexion</string>
+    <string name="supprimer_cnx">Supprimer connexion</string>
+
+    <!--objet-->
+    <string name="ajouter_objt">Ajouter objet</string>
+    <string name="modifier_objt">modifier objet</string>
+    <string name="supprimer_objt">Supprimer objet</string>
+
 </resources>
